# cursor-pulse

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yaml  cursor-pulse.bat  cursor-pulse.ps1  cursor-pulse.sh  cursor-usage-api.md  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
assistant_platform/: __init__.py  __main__.py  app.py  cli.py  config.py  dev.py
docker/: .env.example  .gitignore  Dockerfile  Dockerfile.proxy  README.md  docker-compose.postgres.yml  docker-compose.proxy.yml  docker-compose.yml
docs/: ARCHITECTURE.md  OSS_IMPORT.md  PRD-v2-ai-tool-center.md  PRD.md  README.md  RUNBOOK.md  bot-commands.md  cursor-usage-api.md  proxy-usage-model-tap.md
personamem/: __init__.py  db.py  distill.py  domain.py  embeddings.py  engine.py  evolution.py  gate.py  models.py  persona.py  ports.py  principles_seed.py  recall.py  reflectors.py  reply.py  repository.py  responders.py  retrieval.py  schedule.py
proxy/: README.md  ca.go  config.go  connect.go  connect_test.go  cursor-agent-proxy.ps1  dotenv.go  dotenv_test.go  exchange_test.go  frames.go  go.mod  loan_passthrough_test.go  main.go  mitm.go  model_tap.go  model_tap_test.go  pool.go  pool_cancel_test.go  pool_pulse_test.go  proxy_test.go  pulse_client.go  pulse_client_test.go  server.go  session.go  session_test.go  upstream.go  upstream_test.go  usage_e2e_test.go  usage_tap.go  usage_tap_test.go
pulse/: __init__.py  app.py  cli.py  config.py  domain.py  periods.py  security_tokens.py  team_settings_loader.py
samples/: usage-events-sample.csv
scripts/: cursor-usage.sh
tests/: conftest.py  test_access_requests.py  test_account_delete.py  test_account_pick.py  test_actor_authz.py  test_admin_cli.py  test_admin_gate.py  test_admin_static.py  test_aggregator.py  test_alerts.py  test_assistant_capabilities_api.py  test_assistant_mirror_integration.py  test_assistant_prompts_api.py  test_assistant_sessions_api.py  test_assistant_skills_api.py  test_audit_format.py  test_billing_cycle.py  test_billing_scope.py  test_burn_rate.py  test_business_days.py  test_capability_bridge.py  test_capability_cursor_key_bind.py  test_capability_guide_image_update.py  test_capability_handlers_phase_c.py  test_capability_knowledge_tip.py  test_capability_manifest.py  test_capability_quota_self_read.py  test_capability_usage_query.py  test_capability_usage_self_read.py  test_capability_web_search.py  test_channel_reply_dedupe.py  test_chat_service.py  (+84 more)
(+495 files in other folders)
