[project]
name = "cursor-pulse"
version = "0.1.0"
description = "钉钉机器人收集团队 Cursor 用量"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "dingtalk-stream>=0.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "PyJWT>=2.8"]
pdf = ["reportlab>=4.0"]
postgres = ["psycopg[binary]>=3.1"]
s3 = ["boto3>=1.34"]
all = ["cursor-pulse[dev,web,pdf,postgres,s3]"]

[project.scripts]
pulse = "pulse.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*", "personamem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
