[project]
name = "cursor-pulse"
version = "0.1.0"
description = "Self-hosted AI tool usage metering and quota control plane (DingTalk-first)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "xiongbo" }]
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "dingtalk-stream>=0.24",
    "httpx>=0.27",
    "cryptography>=42.0",
    "chinese-calendar>=1.9",
]

[project.urls]
Homepage = "https://github.com/cnwinds/cursor-pulse"
Repository = "https://github.com/cnwinds/cursor-pulse"
Issues = "https://github.com/cnwinds/cursor-pulse/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0", "httpx>=0.27"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "PyJWT>=2.8"]
pdf = ["reportlab>=4.0"]
postgres = ["psycopg[binary]>=3.1"]
s3 = ["boto3>=1.34"]
all = ["cursor-pulse[dev,web,pdf,postgres,s3]"]

[project.scripts]
pulse = "pulse.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*", "assistant_platform*"]

# Vue admin build output (see web-admin/vite.config.ts → pulse/web/static)
[tool.setuptools.package-data]
pulse = ["web/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
